[gd_scene load_steps=91 format=2]

[ext_resource path="res://Assets/Levels/3_GeoCity/Creepy_City/small_pumpkin.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UI/Interact/InteractChat.gd" type="Script" id=2]
[ext_resource path="res://Assets/Levels/3_GeoCity/City_BG.png" type="Texture" id=3]
[ext_resource path="res://Assets/Levels/3_GeoCity/Creepy_City/cloud.png" type="Texture" id=5]
[ext_resource path="res://Assets/Levels/3_GeoCity/Creepy_City/stars.png" type="Texture" id=6]
[ext_resource path="res://Assets/Levels/3_GeoCity/city_updated.png" type="Texture" id=7]
[ext_resource path="res://Assets/Levels/3_GeoCity/Creepy_City/creepycat_spritesheet.png" type="Texture" id=8]
[ext_resource path="res://Assets/Levels/3_GeoCity/City_Guard_Rail.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/sbutton/S_Button_Press.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Levels/3_GeoCity/Interactions.gd" type="Script" id=11]
[ext_resource path="res://Assets/Sfx/Bckg/GeoCats_Salty_Swing.ogg" type="AudioStream" id=12]
[ext_resource path="res://Assets/Levels/3_GeoCity/Cats/lasagna.png" type="Texture" id=13]
[ext_resource path="res://Scenes/Default.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Levels/3_GeoCity/npc.gd" type="Script" id=15]
[ext_resource path="res://Assets/Levels/3_GeoCity/City_tree.png" type="Texture" id=16]
[ext_resource path="res://Assets/Levels/3_GeoCity/Cats/longcat.png" type="Texture" id=17]
[ext_resource path="res://Assets/Levels/3_GeoCity/Cats/nonacat.png" type="Texture" id=18]
[ext_resource path="res://Assets/Levels/3_GeoCity/fg_entrance_city.png" type="Texture" id=19]
[ext_resource path="res://Assets/Levels/3_GeoCity/Cats/garbitage.png" type="Texture" id=20]
[ext_resource path="res://Scenes/Levels/3_GeoCity/3_GeoCity.gd" type="Script" id=21]
[ext_resource path="res://Assets/Sfx/SFX/BirdsGeoCity.ogg" type="AudioStream" id=22]
[ext_resource path="res://Assets/Levels/3_GeoCity/Creepy_City/big_pumpkin_spritesheet.png" type="Texture" id=23]
[ext_resource path="res://Assets/Levels/3_GeoCity/Creepy_City/moon.png" type="Texture" id=24]
[ext_resource path="res://Assets/Levels/3_GeoCity/Creepy_City/medium_pumpkin_sptritesheet.png" type="Texture" id=25]

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 1200, 300 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 0, 300, 1200, 300 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 6 )
region = Rect2( 0, 600, 1200, 300 )

[sub_resource type="SpriteFrames" id=59]
animations = [ {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 56 ), SubResource( 56 ), SubResource( 57 ), SubResource( 57 ), SubResource( 57 ), SubResource( 58 ), SubResource( 58 ), SubResource( 57 ), SubResource( 56 ), SubResource( 57 ), SubResource( 56 ), SubResource( 56 ), SubResource( 58 ), SubResource( 58 ), SubResource( 56 ), SubResource( 56 ), SubResource( 58 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 25 )
region = Rect2( 0, 0, 14, 17 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 25 )
region = Rect2( 14, 0, 14, 17 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 25 )
region = Rect2( 28, 0, 14, 17 )

[sub_resource type="SpriteFrames" id=63]
animations = [ {
"frames": [ SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 61 ), SubResource( 61 ), SubResource( 62 ), SubResource( 61 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ), SubResource( 60 ) ],
"loop": true,
"name": "default",
"speed": 9.0
} ]

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 11, 15 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 8 )
region = Rect2( 11, 0, 11, 15 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 8 )
region = Rect2( 22, 0, 11, 15 )

[sub_resource type="SpriteFrames" id=67]
animations = [ {
"frames": [ SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 66 ), SubResource( 66 ), SubResource( 66 ), SubResource( 66 ), SubResource( 66 ), SubResource( 66 ), SubResource( 66 ), SubResource( 66 ), SubResource( 66 ), SubResource( 66 ), SubResource( 65 ), SubResource( 64 ), SubResource( 64 ), SubResource( 64 ), SubResource( 64 ), SubResource( 64 ), SubResource( 64 ), SubResource( 64 ), SubResource( 64 ), SubResource( 64 ), SubResource( 64 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 65 ), SubResource( 64 ), SubResource( 64 ), SubResource( 64 ), SubResource( 64 ), SubResource( 64 ), SubResource( 64 ), SubResource( 64 ), SubResource( 64 ), SubResource( 64 ), SubResource( 64 ), SubResource( 64 ), SubResource( 64 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9, 465 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9, 319 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 14 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 301, 10 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 290, 10 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 242, 6 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 32, 6 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 21, 6 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 34, 6 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 209, 6 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 176, 6 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 182, 6 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 101, 6 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 154, 6 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 29, 6 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 325, 6 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 182, 6 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 91, 6 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 14, 2 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 41, 14 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 59, 10 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 98, 10 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 52, 6 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 52, 6 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 35, 5 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 123, 6 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 6, 51 )

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 2409, 85 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 8, 605 )

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 2499, 10 )

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 75, 96 )

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 75, 47 )

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 24, 16 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 11, 7 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 17 )
region = Rect2( 11, 0, 11, 7 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ SubResource( 36 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ), SubResource( 36 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 33.2397, 28.051 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 18 )
region = Rect2( 11, 0, 11, 7 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 11, 7 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 18 )
region = Rect2( 22, 0, 11, 7 )

[sub_resource type="SpriteFrames" id=48]
animations = [ {
"frames": [ SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 47 ), SubResource( 46 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 13 )
region = Rect2( 11, 0, 11, 7 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 13 )
region = Rect2( 22, 0, 11, 7 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 11, 7 )

[sub_resource type="SpriteFrames" id=52]
animations = [ {
"frames": [ SubResource( 49 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 20 )
region = Rect2( 60, 0, 15, 12 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 20 )
region = Rect2( 75, 0, 15, 12 )

[sub_resource type="SpriteFrames" id=55]
animations = [ {
"frames": [ SubResource( 53 ), SubResource( 54 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 61.5852, 58.9592 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 23 )
region = Rect2( 0, 54, 50, 54 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 23 )
region = Rect2( 50, 54, 50, 54 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 23 )
region = Rect2( 0, 0, 50, 54 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 23 )
region = Rect2( 50, 0, 50, 54 )

[sub_resource type="SpriteFrames" id=42]
animations = [ {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 40 ), SubResource( 40 ), SubResource( 40 ), SubResource( 40 ), SubResource( 41 ), SubResource( 40 ), SubResource( 40 ), SubResource( 40 ), SubResource( 41 ), SubResource( 40 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "Sad",
"speed": 9.0
}, {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 68 ), SubResource( 68 ), SubResource( 68 ), SubResource( 69 ), SubResource( 68 ), SubResource( 68 ), SubResource( 69 ), SubResource( 68 ), SubResource( 68 ), SubResource( 68 ), SubResource( 69 ), SubResource( 68 ), SubResource( 69 ), SubResource( 69 ), SubResource( 68 ), SubResource( 68 ), SubResource( 68 ), SubResource( 68 ), SubResource( 68 ), SubResource( 69 ), SubResource( 69 ), SubResource( 68 ), SubResource( 68 ), SubResource( 68 ), SubResource( 68 ) ],
"loop": true,
"name": "Happy",
"speed": 18.0
} ]

[node name="GeoCity" type="Node2D"]
script = ExtResource( 21 )

[node name="BehindPlayer" type="Node2D" parent="."]
scale = Vector2( 4, 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="City_BG" type="Sprite" parent="BehindPlayer"]
texture = ExtResource( 3 )
centered = false

[node name="Stars" type="AnimatedSprite" parent="BehindPlayer"]
visible = false
frames = SubResource( 59 )
frame = 9
playing = true

[node name="Moon" type="Sprite" parent="BehindPlayer"]
visible = false
position = Vector2( 434.764, 87.4239 )
scale = Vector2( 1.06667, 1 )
texture = ExtResource( 24 )

[node name="Clouds" type="Sprite" parent="BehindPlayer"]
visible = false
position = Vector2( -3.05176e-05, 0 )
texture = ExtResource( 5 )
centered = false

[node name="City_Buildings" type="Sprite" parent="BehindPlayer"]
texture = ExtResource( 7 )
centered = false

[node name="Pumpkin_Small" type="Sprite" parent="BehindPlayer"]
visible = false
position = Vector2( 632.545, 114.332 )
texture = ExtResource( 1 )
centered = false

[node name="City_Guard_Rail" type="Sprite" parent="BehindPlayer"]
position = Vector2( 75, 73 )
z_index = 1
z_as_relative = false
texture = ExtResource( 9 )

[node name="Pumpkin_Medium" type="AnimatedSprite" parent="BehindPlayer"]
visible = false
position = Vector2( 233.633, 12.7828 )
frames = SubResource( 63 )
frame = 18
playing = true

[node name="Creepy_Cat" type="AnimatedSprite" parent="BehindPlayer"]
visible = false
position = Vector2( 1158.99, 179.007 )
frames = SubResource( 67 )
frame = 30
playing = true

[node name="LadderColl" type="Node2D" parent="."]

[node name="Ladder" type="Area2D" parent="LadderColl" groups=[
"ladder",
]]
position = Vector2( 721, 545 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LadderColl/Ladder"]
shape = SubResource( 3 )

[node name="Ladder2" type="Area2D" parent="LadderColl" groups=[
"ladder",
]]
position = Vector2( 4337.13, 710.159 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LadderColl/Ladder2"]
shape = SubResource( 4 )

[node name="Bricks" type="StaticBody2D" parent="."]
position = Vector2( 2800, 500 )
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bricks"]
position = Vector2( 88, 42 )
shape = SubResource( 5 )
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bricks"]
position = Vector2( 228, 42 )
shape = SubResource( 5 )
one_way_collision = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Bricks"]
position = Vector2( 414.976, 282.932 )
shape = SubResource( 5 )
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Bricks"]
position = Vector2( 384, 46 )
shape = SubResource( 5 )
one_way_collision = true

[node name="Houses" type="StaticBody2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Houses"]
position = Vector2( 291, 314 )
shape = SubResource( 6 )
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Houses"]
position = Vector2( 978, 90 )
shape = SubResource( 7 )
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Houses"]
position = Vector2( 1156, 751 )
shape = SubResource( 8 )
one_way_collision = true

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Houses"]
position = Vector2( 1406, 871.2 )
shape = SubResource( 9 )
one_way_collision = true

[node name="CollisionShape2D25" type="CollisionShape2D" parent="Houses"]
position = Vector2( 1469, 830 )
shape = SubResource( 10 )
one_way_collision = true

[node name="CollisionShape2D27" type="CollisionShape2D" parent="Houses"]
position = Vector2( 1468, 894 )
shape = SubResource( 10 )
one_way_collision = true

[node name="CollisionShape2D26" type="CollisionShape2D" parent="Houses"]
position = Vector2( 1467, 839 )
shape = SubResource( 11 )
one_way_collision = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Houses"]
position = Vector2( 1482, 379 )
shape = SubResource( 12 )
one_way_collision = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Houses"]
position = Vector2( 2644, 486 )
shape = SubResource( 13 )
one_way_collision = true

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Houses"]
position = Vector2( 2645, 916 )
shape = SubResource( 14 )
one_way_collision = true

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Houses"]
position = Vector2( 2644, 839 )
shape = SubResource( 15 )
one_way_collision = true

[node name="CollisionShape2D13" type="CollisionShape2D" parent="Houses"]
position = Vector2( 3420, 899 )
shape = SubResource( 15 )
one_way_collision = true

[node name="CollisionShape2D14" type="CollisionShape2D" parent="Houses"]
position = Vector2( 3006, 826.482 )
shape = SubResource( 16 )
one_way_collision = true

[node name="CollisionShape2D29" type="CollisionShape2D" parent="Houses"]
position = Vector2( 3006, 682.482 )
shape = SubResource( 16 )
one_way_collision = true

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Houses"]
position = Vector2( 2415, 842 )
shape = SubResource( 17 )
one_way_collision = true

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Houses"]
position = Vector2( 3578, 531 )
shape = SubResource( 18 )
one_way_collision = true

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Houses"]
position = Vector2( 4234, 410 )
shape = SubResource( 19 )
one_way_collision = true

[node name="CollisionShape2D24" type="CollisionShape2D" parent="Houses"]
position = Vector2( 4194, 728 )
shape = SubResource( 20 )
one_way_collision = true

[node name="CollisionShape2D28" type="CollisionShape2D" parent="Houses"]
position = Vector2( 4195.75, 994.686 )
shape = SubResource( 20 )
one_way_collision = true

[node name="CollisionShape2D15" type="CollisionShape2D" parent="Houses"]
position = Vector2( 4558, 978 )
shape = SubResource( 21 )
one_way_collision = true

[node name="CollisionShape2D17" type="CollisionShape2D" parent="Houses"]
position = Vector2( 3172, 1019 )
shape = SubResource( 22 )
one_way_collision = true

[node name="CollisionShape2D18" type="CollisionShape2D" parent="Houses"]
position = Vector2( 2975, 1018 )
shape = SubResource( 22 )
one_way_collision = true

[node name="CollisionShape2D19" type="CollisionShape2D" parent="Houses"]
position = Vector2( 1808, 862 )
shape = SubResource( 23 )
one_way_collision = true

[node name="CollisionShape2D21" type="CollisionShape2D" parent="Houses"]
position = Vector2( 297, 805 )
shape = SubResource( 24 )
one_way_collision = true

[node name="CollisionShape2D22" type="CollisionShape2D" parent="Houses"]
position = Vector2( 109, 695 )
shape = SubResource( 25 )
one_way_collision = true

[node name="CollisionShape2D23" type="CollisionShape2D" parent="Houses"]
position = Vector2( 483, 694 )
shape = SubResource( 26 )
one_way_collision = true

[node name="CollisionShape2D20" type="CollisionShape2D" parent="Houses"]
position = Vector2( 1725, 797 )
shape = SubResource( 27 )
one_way_collision = true

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Houses"]
position = Vector2( 4677, 106 )
shape = SubResource( 28 )
one_way_collision = true

[node name="CollisionShape2D16" type="CollisionShape2D" parent="Houses"]
position = Vector2( 4554, 151 )
shape = SubResource( 29 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Houses"]
polygon = PoolVector2Array( 4615, 1040, 4703, 984, 4722, 985, 4725, 844, 4556, 846, 4556, 205, 4799, 201, 4801, 1032 )

[node name="Ground" type="StaticBody2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2( 2410, 1113 )
shape = SubResource( 30 )

[node name="EndWalls" type="StaticBody2D" parent="." groups=[
"end",
]]
position = Vector2( 2408, 1117 )
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndWalls"]
position = Vector2( -2416, -532 )
shape = SubResource( 31 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="EndWalls"]
position = Vector2( 2400, -518 )
shape = SubResource( 31 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="EndWalls"]
position = Vector2( -47, -1127 )
shape = SubResource( 32 )

[node name="GoToComplex" type="Area2D" parent="."]
position = Vector2( 4667, 942 )
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoToComplex"]
shape = SubResource( 33 )

[node name="Button" type="Sprite" parent="GoToComplex"]
visible = false
position = Vector2( 0, -60 )
scale = Vector2( 0.198469, 0.207692 )
texture = ExtResource( 10 )

[node name="PopNnip" type="Area2D" parent="."]
position = Vector2( 2647, 974 )
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PopNnip"]
shape = SubResource( 34 )

[node name="Button" type="Sprite" parent="PopNnip"]
visible = false
position = Vector2( 0, -60 )
scale = Vector2( 0.198469, 0.207692 )
texture = ExtResource( 10 )

[node name="DonutShop" type="Area2D" parent="."]
position = Vector2( 1023, 977 )
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DonutShop"]
shape = SubResource( 34 )

[node name="Button" type="Sprite" parent="DonutShop"]
visible = false
position = Vector2( 0, -60 )
scale = Vector2( 0.198469, 0.207692 )
texture = ExtResource( 10 )

[node name="Longcat" type="KinematicBody2D" parent="."]
position = Vector2( 3328, 848 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Longcat"]
shape = SubResource( 35 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Longcat"]
scale = Vector2( 4, 4 )
frames = SubResource( 38 )
animation = "walk"
frame = 1
playing = true

[node name="LongCatArea2D" type="Area2D" parent="Longcat"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Longcat/LongCatArea2D"]
position = Vector2( 2.29077, 0.729614 )
shape = SubResource( 39 )

[node name="Nonacat" type="KinematicBody2D" parent="."]
position = Vector2( 4124, 689 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nonacat"]
shape = SubResource( 35 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Nonacat"]
scale = Vector2( 4, 4 )
frames = SubResource( 48 )
animation = "walk"
frame = 1
playing = true

[node name="NonacatArea2D" type="Area2D" parent="Nonacat"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nonacat/NonacatArea2D"]
position = Vector2( -1.00005, 1.00002 )
shape = SubResource( 39 )

[node name="Lasagne" type="KinematicBody2D" parent="."]
position = Vector2( 2029.28, 986.472 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lasagne"]
shape = SubResource( 35 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Lasagne"]
scale = Vector2( 4, 4 )
frames = SubResource( 52 )
animation = "walk"
frame = 1
playing = true
flip_h = true

[node name="LasagneArea2D" type="Area2D" parent="Lasagne"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lasagne/LasagneArea2D"]
position = Vector2( 3.23462, -1.15808 )
shape = SubResource( 39 )

[node name="Garbitage" type="KinematicBody2D" parent="."]
position = Vector2( 1600, 311 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Garbitage"]
position = Vector2( 27, 33 )
shape = SubResource( 35 )

[node name="ViewportContainer" type="ViewportContainer" parent="Garbitage"]
margin_right = 75.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 22.5, 12.5 )
mouse_filter = 2
stretch = true
stretch_shrink = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Garbitage/ViewportContainer"]
size = Vector2( 15, 12 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="Garbitage/ViewportContainer/Viewport"]
frames = SubResource( 55 )
animation = "idle"
frame = 1
speed_scale = 0.1
playing = true
centered = false
flip_h = true

[node name="Area2DGarbitage" type="Area2D" parent="Garbitage"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Garbitage/Area2DGarbitage"]
position = Vector2( 39, 33 )
shape = SubResource( 39 )

[node name="Default" parent="." instance=ExtResource( 14 )]

[node name="Player" parent="Default" index="1"]
position = Vector2( 4572.59, 998.135 )

[node name="Camera2D" parent="Default/Player" index="0"]
limit_right = 4800
limit_bottom = 1200

[node name="AnimatedSprite" parent="Default/Player" index="1"]
frame = 33
flip_h = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -3.0
pitch_scale = 0.36
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
stream_paused = true

[node name="FrontPlayer" type="Node2D" parent="."]
scale = Vector2( 4, 4 )

[node name="Giant_Pumpkin_body" type="Area2D" parent="FrontPlayer"]
position = Vector2( 843.487, 107.92 )
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrontPlayer/Giant_Pumpkin_body"]
shape = SubResource( 43 )

[node name="Giant_Pumpkin" type="AnimatedSprite" parent="FrontPlayer"]
position = Vector2( 843.487, 107.92 )
frames = SubResource( 42 )
animation = "Sad"
frame = 8
playing = true

[node name="City_Guard_Rail" type="Sprite" parent="FrontPlayer"]
position = Vector2( 75, 73 )
z_index = 1
z_as_relative = false
texture = ExtResource( 9 )

[node name="City_tree" type="Sprite" parent="FrontPlayer"]
position = Vector2( 953, 240 )
texture = ExtResource( 16 )

[node name="fg_entrance_city" type="Sprite" parent="FrontPlayer"]
position = Vector2( 1187, 234 )
texture = ExtResource( 19 )

[editable path="Default"]
[editable path="Default/Affogato"]
[editable path="Default/Player"]
